infra/k8s/or_server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: or-server
spec:
  containers:
    - name: or-server
      image: sofarawaydev/or-server:0.0.1
