infra/k8s/or-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: or-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: or-server
  template:
    metadata:
      labels:
        app: or-server
    spec:
      containers: 
        - name: or-server
          image: sofarawaydev/or-server
---
apiVersion: v1
kind: Service
metadata:
  name: or-server
spec:
  selector:
    app: or-server
  type: ClusterIP
  ports:
    - name: or-server
      protocol: TCP
      port: 80
      targetPort: 3000
