infra/k8s/or-server-node-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: or-server-srv
spec:
  type: NodePort
  selector:
    app: or-server
  ports:
    - name: or-server
      protocol: TCP
      port: 2000
      targetPort: 3000
